recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:10: error: type mismatch;
 found   : Int
 required: List[Int]
  return min(l.head)
               ^Min:9: error: type mismatch;
 found   : Unit
 required: Int
  if(l.tail.head < l.head)
  ^